--- a/src/Form.css
+++ b/src/Form.css
@@ -2,16 +2,23 @@
     color: white;
 }
 
-.num-name {
+.num, .name {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
+    padding-bottom: 16px;
+}
+
+.num {
+    padding-top: 32px;
 }
 
 .exp-cvc {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto;
+    padding-bottom: 32px;
+    justify-content: space-between;
 }
 
 #button {
@@ -20,9 +27,25 @@
     padding: 20px;
     border-radius: 10px;
     font-weight: bold;
+    font-size: 14px;
+}
+
+
+input {
+    background-color: black;
+    border: 0;
+    border: 1px solid #323238;
+    border-radius: 6px;
+    padding: 10px;
+}
+
+p {
+    font-size: 12px;
 }
 
 form {
     display: flex;
     flex-direction: column;
 }
+
+
