--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
     grid-template-rows: auto;
     align-items: center;
     justify-content: center;
+    border-radius: 6px;
 }
 
 #left {
@@ -24,3 +25,10 @@
     padding-bottom: 30px;
 }
 
+.body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: black;
+}
